argocd/argocd-ingressroute.yaml
  apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    name: argocd-server
    namespace: argocd
    annotations:
      external-dns.alpha.kubernetes.io/hostname: argocd.capihome.xyz
      #external-dns.alpha.kubernetes.io/target: 192.168.0.161
  spec:
    entryPoints:
      - websecure
    routes:
      - kind: Rule
        match: Host(`argocd.capihome.xyz`)
        priority: 10
        services:
          - name: argocd-server
            port: 80
      - kind: Rule
        match: Host(`argocd.capihome.xyz`) && Header(`Content-Type`, `application/grpc`)
        priority: 11
        services:
          - name: argocd-server
            port: 80
            scheme: h2c
    tls:
      secretName: wildcard-capihome-xyz-tls
